<resources>
    <string name="app_name">StudySupportMobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="execute_button">DBアクセス</string>
    <string name="question">問題</string>
    <string name="answer">解答</string>
    <string name="category1_label">カテゴリー大分類</string>
    <string name="category2_label">カテゴリー中分類</string>
    <string name="category3_label">カテゴリー小分類</string>
</resources>
