<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context=".MainActivity">

    <Button
            android:text="@string/execute_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/execute_button"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
    />
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            android:id="@+id/textInputLayout" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question" android:id="@+id/question"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" android:id="@+id/textInputLayout2">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer" android:id="@+id/answer"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" tools:layout_editor_absoluteX="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/execute_button">
        <TextView
                android:text="@string/category1_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/category1Label"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/category1"/>
        <TextView
                android:text="@string/category2_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/category2Label"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/category2"/>
        <TextView
                android:text="@string/category3_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/category3Label"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/category3"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>